# tpga-abertura

./: .gitignore  AUDITORIA_FINAL.md  DASHBOARD.py  DEPLOY.ps1  DEPLOY_AUTO.ps1  DEPLOY_FINAL.ps1  DEPLOY_RUN.bat  DISCLAIMER.md  INICIAR_SERVIDOR.bat  INICIAR_TUNEL.bat  MANIFESTO_ARQUIVOS.txt  MT5_ONLINE_CURTO_HISTORICO_FIX.md  MT5_ONLINE_NO_CSV_GUIDE.md  MT5_REAL_DATA_GUIDE.md  README.md  RODAR_COM_MT5.bat  RODAR_SEM_MT5_yfinance.py  SINAL_DAX_HIBRIDO.py  SINAL_HOJE_HIBRIDO.py  SINAL_NIKKEI_HIBRIDO.py  SINAL_OIL_HIBRIDO.py  SINAL_SP500_HIBRIDO.py  SINAL_XAUUSD_HIBRIDO.py  TEORIA_TPGA_NDX100.md  VALIDACAO_ESTATISTICA.md  experiment_features.py  generate_signal_ci.py  pyproject.toml  requirements-server.txt  requirements.txt  requirements_ci.txt  rodar_robo.txt  server_mt5.py  teste_padroes_abertura.py  vercel.json
.github/workflows/: daily_signal.yml
config/: tpga_config.yaml
dashboard/: index.html
public/: config.js  index.html  signal.json  signal_dax.json  signal_nky.json  signal_oil.json  signal_sp5.json  signal_xauusd.json
scripts/: build_mt5_dataset_windows.ps1  install_windows.ps1  mt5_check_windows.ps1  mt5_live_once_windows.ps1  mt5_online_loop_windows.ps1  mt5_online_once_windows.ps1  mt5_online_validate_windows.ps1  run_demo_windows.ps1  validate_mt5_windows.ps1
src/tpga/: backtest.py  bootstrap.py  cli.py  data_schema.py  features.py  live_signal.py  market_data.py  metrics.py  model.py  mt5_client.py  mt5_gap_builder.py  regime.py  report.py  signal_engine.py  (+1 more)
tests/: test_backtest.py  test_features.py  test_mt5_gap_builder.py  test_schema.py
